--- a/.github/workflows/uniqlo-women.yml
+++ b/.github/workflows/uniqlo-women.yml
@@ -2,7 +2,7 @@ name: Scrape uniq Women Data
 
 on:
   schedule:
-    - cron:  '3,13,23,33,43,53 * * * *'
+    - cron:  '*/20 * * * *'
 
 jobs:
   scheduled:
